Refactor schemas