@@ -14,6 +14,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.ewm.client.stats.CollectorClient;
 import ru.practicum.ewm.core.events.entity.Category;
 import ru.practicum.ewm.core.events.entity.Event;
 import ru.practicum.ewm.core.events.entity.Location;
@@ -33,7 +34,7 @@ import ru.practicum.ewm.core.interaction.enums.EventState;
 import ru.practicum.ewm.core.interaction.enums.SortValue;
 import ru.practicum.ewm.core.interaction.feignclient.priv.PrivateRequestFeignClient;
 import ru.practicum.ewm.core.interaction.feignclient.pub.PublicCommentFeignClient;
-import ru.practicum.ewm.stats.client.StatisticsService;
+import ru.practicum.ewm.stats.proto.UserActionProto;
 
 import java.time.LocalDateTime;
 import java.util.*;
@@ -52,7 +53,8 @@ public class EventServiceImpl implements EventService {
 
     private final EventRepository eventRepository;
     private final CategoryRepository categoryRepository;
-    private final StatisticsService statisticsService;
+//    private final StatisticsService statisticsService;
+    private final CollectorClient collectorClient;
     private final AdminUserFeignClient adminUserFeignClient;
     private final AdminRequestFeignClient adminRequestFeignClient;
     private final PrivateRequestFeignClient privateRequestFeignClient;
@@ -91,12 +93,12 @@ public class EventServiceImpl implements EventService {
         if (eventsPage.hasContent()) {
             List<Long> eventIds = eventsPage.getContent().stream()
                     .map(Event::getId)
-                    .collect(Collectors.toList());
+                    .toList();
 
-            Map<Long, Long> viewsMap = statisticsService.getEventsViews(eventIds, null, false);
-            eventsPage.getContent().forEach(event ->
-                    event.setViews(viewsMap.getOrDefault(event.getId(), 0L))
-            );
+//            Map<Long, Long> viewsMap = statisticsService.getEventsViews(eventIds, null, false);
+//            eventsPage.getContent().forEach(event ->
+//                    event.setViews(viewsMap.getOrDefault(event.getId(), 0L))
+//            );
         }
         return eventsPage.getContent().stream()
                 .map(event -> eventMapper.toEventShortDto(event, adminUserFeignClient.getUser(event.getInitiator())))
@@ -143,8 +145,8 @@ public class EventServiceImpl implements EventService {
         Event event = eventRepository.findByIdAndInitiator(eventId, userId)
                 .orElseThrow(() -> new EventNotExistException("Event with id=" + eventId + " was not found"));
 
-        Map<Long, Long> viewsMap = statisticsService.getEventsViews(List.of(eventId), null, false);
-        event.setViews(viewsMap.getOrDefault(eventId, 0L));
+//        Map<Long, Long> viewsMap = statisticsService.getEventsViews(List.of(eventId), null, false);
+//        event.setViews(viewsMap.getOrDefault(eventId, 0L));
 
         return eventMapper.toEventFullDto(event, adminUserFeignClient.getUser(event.getInitiator()));
     }
@@ -195,29 +197,32 @@ public class EventServiceImpl implements EventService {
 
     @Override
     @Transactional
-    public EventFullDto getEvent(Long eventId, HttpServletRequest request) {
+    public EventFullDto getEvent(Long eventId, Long userId, HttpServletRequest request) {
         Event event = eventRepository.findByIdAndPublishedOnIsNotNull(eventId)
                 .orElseThrow(() -> new NotFoundException("Event with id=" + eventId + " was not found"));
 
         UserDto user = adminUserFeignClient.getUser(event.getInitiator());
 
-        String clientIp = getClientIp(request);
-        boolean isUnique = isUniqueView(eventId, clientIp);
+        UserActionProto userActionProto = new UserActionProto.builder()
+                .build();
 
-        Map<Long, Long> viewsMap = statisticsService.getEventsViews(List.of(eventId), request, true);
-        Long statsViews = viewsMap.getOrDefault(eventId, 0L);
+//        String clientIp = getClientIp(request);
+//        boolean isUnique = isUniqueView(eventId, clientIp);
 
-        Long newViews;
-        if (isUnique) {
-            newViews = event.getViews() + 1;
-        } else {
-            newViews = Math.max(statsViews, event.getViews());
-        }
-
-        if (!newViews.equals(event.getViews())) {
-            event.setViews(newViews);
-            event = eventRepository.save(event);
-        }
+//        Map<Long, Long> viewsMap = statisticsService.getEventsViews(List.of(eventId), request, true);
+//        Long statsViews = viewsMap.getOrDefault(eventId, 0L);
+//
+//        Long newViews;
+//        if (isUnique) {
+//            newViews = event.getViews() + 1;
+//        } else {
+//            newViews = Math.max(statsViews, event.getViews());
+//        }
+//
+//        if (!newViews.equals(event.getViews())) {
+//            event.setViews(newViews);
+//            event = eventRepository.save(event);
+//        }
 
         return eventMapper.toEventFullDto(event, user);
     }
@@ -263,10 +268,10 @@ public class EventServiceImpl implements EventService {
 
         List<Long> eventIds = events.stream()
                 .map(Event::getId)
-                .collect(Collectors.toList());
+                .toList();
 
-        Map<Long, Long> viewsMap = statisticsService.getEventsViews(eventIds, null, false);
-        events.forEach(event -> event.setViews(viewsMap.getOrDefault(event.getId(), 0L)));
+//        Map<Long, Long> viewsMap = statisticsService.getEventsViews(eventIds, null, false);
+//        events.forEach(event -> event.setViews(viewsMap.getOrDefault(event.getId(), 0L)));
 
         return events.stream()
                 .map(event -> eventMapper.toEventFullDto(event, eventIdsUserDto.get(event.getId())))
@@ -300,11 +305,10 @@ public class EventServiceImpl implements EventService {
 
         List<Long> eventIds = events.stream()
                 .map(Event::getId)
-                .collect(Collectors.toList());
+                .toList();
 
-        Map<Long, Long> viewsMap = statisticsService.getEventsViews(eventIds, httpRequest, true);
-
-        events.forEach(event -> event.setViews(viewsMap.getOrDefault(event.getId(), 0L)));
+//        Map<Long, Long> viewsMap = statisticsService.getEventsViews(eventIds, httpRequest, true);
+//        events.forEach(event -> event.setViews(viewsMap.getOrDefault(event.getId(), 0L)));
 
         if (shouldSort(request.getSort())) {
             Comparator<Event> comparator = request.getSort() == SortValue.VIEWS ?
@@ -494,10 +498,8 @@ public class EventServiceImpl implements EventService {
     public void saveEvent(EventFullDto eventFullDto) {
         Event event = eventRepository.findById(eventFullDto.getId())
                 .orElseThrow(() -> new RuntimeException("Event not found"));
-
         event.setConfirmedRequests(eventFullDto.getConfirmedRequests());
-
-        Event save = eventRepository.save(event);
+        eventRepository.save(event);
     }
 
     private void updateEventFieldsFromUserDto(Event event, UpdateEventUserDto dto) {
@@ -689,12 +691,12 @@ public class EventServiceImpl implements EventService {
                 .getResultList();
     }
 
-    private boolean isUniqueView(Long eventId, String clientIp) {
-        return viewCache.computeIfAbsent(clientIp, k -> new HashSet<>()).add(eventId);
-    }
-
-    private String getClientIp(HttpServletRequest request) {
-        return request.getRemoteAddr();
-    }
+//    private boolean isUniqueView(Long eventId, String clientIp) {
+//        return viewCache.computeIfAbsent(clientIp, k -> new HashSet<>()).add(eventId);
+//    }
+//
+//    private String getClientIp(HttpServletRequest request) {
+//        return request.getRemoteAddr();
+//    }
 
 }
